--- a/docker/Dockerfile.slim
+++ b/docker/Dockerfile.slim
@@ -2,6 +2,8 @@
 # hadolint ignore=DL3029
 FROM alpine:3.22.1@sha256:4bcff63911fcb4448bd4fdacec207030997caf25e9bea4045fa6c8c44de311d1 as certs
 
+RUN apk add --no-cache ca-certificates
+
 ## Goreleaser requires the "--platform" to handle multi-platform builds
 # hadolint ignore=DL3029
 FROM scratch
